--- a/app/views/episodes/index.html.slim
+++ b/app/views/episodes/index.html.slim
@@ -1,5 +1,5 @@
-ul
-- @episodes.each do |episode|
-  li
-    = image_tag "#{episode.podcast.name}.jpg", :size => "100x100"
-    = episode.name
+ul#episodes
+  - @episodes.each do |episode|
+    li
+      = image_tag "#{episode.podcast.name}.jpg", :size => "150x150"
+      = episode.name
