--- a/app/assets/stylesheets/episodes.scss
+++ b/app/assets/stylesheets/episodes.scss
@@ -1,25 +1,8 @@
-body {
-  text-align: center;
-}
-
-div#content {
-  text-align: left;
-  width: 972px;
-  margin: 0 auto;
-}
-
 ul#episodes {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-
   li {
-    display: inline;
-    float: left;
-    position: relative;
     font-size: 12px;
-    padding: 6px;
-    height: 200px;
-    width: 150px;
+    height: 220px;
+    margin-left: 0px;
+    margin-right: 25px;
   }
 }
