--- a/app/views/episodes/index.html.slim
+++ b/app/views/episodes/index.html.slim
@@ -2,5 +2,5 @@
   ul#episodes.unstyled.span12
     - @episodes.each do |episode|
       li.span2
-        = image_tag "#{episode.podcast.name}.jpg"
-        = episode.name
+        = link_to image_tag("#{episode.podcast.name}.jpg"), episode.url
+        = link_to episode.name, episode.url
