--- a/app/assets/stylesheets/episodes.scss
+++ b/app/assets/stylesheets/episodes.scss
@@ -1,8 +1,6 @@
 ul#episodes {
   li {
     font-size: 12px;
-    height: 220px;
-    margin-left: 12px;
-    margin-right: 12px;
+    margin: 12px;
   }
 }
