--- a/app/views/episodes/index.html.slim
+++ b/app/views/episodes/index.html.slim
@@ -3,6 +3,4 @@
     - @episodes.each do |episode|
       li.span2
         = link_to image_tag("#{episode.podcast.name}.jpg"), episode.url, :class => 'img-rounded'
-        = link_to episode.name, episode.url
-        = link_to episode.audio_url do
-          i.icon-music
+        = link_to truncate(episode.name, :length => 26, :omission => '...'), episode.audio_url
