--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,5 +8,9 @@ html
     = csrf_meta_tags
 
   body
+    .navbar.navbar-fixed-top
+      .navbar-inner
+        .container
+          a.brand href="#" Hacker Podcasts
     .container
       == yield
